# bbs2

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
bbs/: config.py  main.py
bbs/ax25/: address.py  kiss_frame.py
bbs/core/: auth.py  engine.py  plugin_registry.py  session.py  terminal.py
bbs/db/: connections.py  schema.py  users.py
bbs/plugins/: README.md
bbs/plugins/bulletins/: bulletin.py
bbs/plugins/chat/: chat.py
bbs/plugins/heard/: heard.py
bbs/plugins/info/: info.py
bbs/plugins/lastconn/: __init__.py  lastconn.py
bbs/transport/: __init__.py  agwpe.py  base.py  kernel_ax25.py  kiss.py  netrom.py  tcp.py  web.py
config/: bbs.yaml.example
install/: bbs2.service  setup.sh
server/: app.py  web_interface.py
server/routes/: activity.py  auth.py  bulletins.py  chat.py  heard.py  info.py  plugins.py  users.py
server/websocket/: handlers.py
tests/: client.py  conftest.py  test_agwpe.py  test_auth.py  test_bulletins.py  test_chat.py  test_chat_sysop.py  test_color.py  test_heard.py  test_heard_graph.py  test_heard_map.py  test_kiss_codec.py  test_lastconn.py  test_session.py
vue-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
vue-app/src/: App.vue  main.js  router.js  socket.js
vue-app/src/components/: NetworkGraph.vue
vue-app/src/views/: Activity.vue  Bulletins.vue  ChatRooms.vue  Dashboard.vue  HeardConfig.vue  InfoEditor.vue  Login.vue  Plugins.vue  Terminal.vue  Users.vue
